--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,61 @@ table {
     background-color: #fff;
     box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
 }
+
+.comment {
+  align-items: center;
+  border-bottom: rgb(120, 120, 120) 2px solid;
+  background-color: white;
+  margin: auto;
+  width: 795px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  min-height: 70px;
+  max-width: 795px;
+  font-size: 30px;
+  padding: 10px;
+  overflow-wrap: break-word;
+}
+
+.comment p {
+  margin: 0;
+  padding: 0;
+}
+
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    overflow-wrap: break-word;
+  }
+  
+  .dropdown-content path {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .show {display: block;}
